--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:layout_width="547dp"
-    android:layout_height="1000dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#000000"
     android:isScrollContainer="false"
     tools:context=".MainActivity">
@@ -13,115 +13,117 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="10dp"
         android:text="Registrarte"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.037"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.012" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="916dp"
         android:elegantTextHeight="true"
         android:text="Es rápido y fácil"
         android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.031"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="30dp"
         android:elegantTextHeight="true"
         android:text="Fecha de nacimiento"
         android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/editTextText6"
+        app:layout_constraintTop_toBottomOf="@+id/editTextText6" />
 
     <EditText
         android:id="@+id/editTextText"
         android:layout_width="250dp"
         android:layout_height="55dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="text"
         android:text="Nombre"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText5"
-        app:layout_constraintEnd_toStartOf="@+id/editTextText4"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/divider" />
 
     <EditText
         android:id="@+id/editTextText5"
         android:layout_width="515dp"
         android:layout_height="55dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="text"
         android:text="Número de celular o correo electrónico"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText6"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/editTextText"
+        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
 
     <EditText
         android:id="@+id/editTextText6"
         android:layout_width="515dp"
         android:layout_height="55dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:text="Contraseña nueva"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="@+id/editTextText5"
+        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />
 
     <EditText
         android:id="@+id/editTextText4"
         android:layout_width="250dp"
         android:layout_height="55dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="15dp"
         android:ems="10"
         android:inputType="text"
         android:text="Apellido"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText5"
-        tools:layout_editor_absoluteX="281dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/editTextText"
+        app:layout_constraintStart_toEndOf="@+id/editTextText"
+        app:layout_constraintTop_toTopOf="@+id/editTextText" />
 
     <RadioButton
         android:id="@+id/radioButton"
         android:layout_width="80dp"
         android:layout_height="45dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="24dp"
         android:checked="false"
         android:text="Mujer"
-        app:layout_constraintEnd_toStartOf="@+id/radioButton2"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="520dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView7"
+        tools:layout_editor_absoluteX="15dp" />
 
     <RadioButton
         android:id="@+id/radioButton2"
         android:layout_width="100dp"
         android:layout_height="45dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="24dp"
         android:text="Hombre"
-        app:layout_constraintEnd_toStartOf="@+id/radioButton3"
-        tools:layout_editor_absoluteY="520dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView7"
+        app:layout_constraintStart_toEndOf="@+id/radioButton" />
 
     <RadioButton
         android:id="@+id/radioButton3"
         android:layout_width="140dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="24dp"
         android:text="Personalizado"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
-        tools:layout_editor_absoluteX="347dp" />
+        app:layout_constraintStart_toEndOf="@+id/radioButton2" />
 
     <androidx.constraintlayout.widget.Barrier
         android:layout_width="wrap_content"
@@ -137,53 +139,73 @@
         android:id="@+id/divider"
         android:layout_width="545dp"
         android:layout_height="1dp"
+        android:layout_marginTop="15dp"
         android:background="?android:attr/listDivider"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="104dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.285"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/editTextDate"
         android:layout_width="515dp"
         android:layout_height="55dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="date"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:text="Género"
         app:layout_constraintBottom_toTopOf="@+id/radioButton"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="@+id/editTextDate"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="515dp"
-        android:layout_height="45dp"
+        android:layout_height="47dp"
         android:layout_marginBottom="20dp"
         android:text="Es posible que las personas que usan nuestro servicio hayan subido tu información de contacto a Facebook. Más información."
         app:layout_constraintBottom_toTopOf="@+id/textView8"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="@+id/radioButton" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="515dp"
         android:layout_height="65dp"
+        android:layout_marginBottom="20dp"
         android:text="Al hacer clic en &quot;Registrarte&quot;, aceptas nuestras Condiciones, la Política de privacidad y la Política de cookies. Es posible que te enviemos notificaciones por SMS, que puedes desactivar cuando quieras."
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="658dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintStart_toStartOf="@+id/textView7" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Registrarse"
-        tools:layout_editor_absoluteX="207dp"
-        tools:layout_editor_absoluteY="770dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.471"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.78" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="Es fácil y rápido"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
